--- a/resources/assets/routes.template
+++ b/resources/assets/routes.template
@@ -1,7 +1,5 @@
 <?php
 
 {% for page in pages %}
-
-    Route::any('{{ page.path }}', 'Anomaly\PagesModule\Http\Controller\PagesController@handle');
-
+Route::any('{{ page.path }}', 'Anomaly\PagesModule\Http\Controller\PagesController@handle_{{ page.id }}');
 {% endfor %}
