--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,13 @@
     "name": "anomaly/pages-module",
     "type": "streams-addon",
     "description": "Public content and page management.",
-    "version": "1.0.0",
     "keywords": [
-        "streams-addon",
-        "pages",
-        "pyrocms",
-        "laravel"
+        "streams module",
+        "streams addon",
+        "module"
     ],
     "homepage": "http://anomaly.is/",
+    "version": "1.0.0",
     "license": "MIT",
     "authors": [
         {
@@ -29,8 +28,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-1.0/master": "1.0.x-dev"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
