--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
     "name": "anomaly/pages-module",
     "type": "streams-addon",
-    "description": "Public content and page management.",
+    "description": "A powerful module for the Streams Platform that lets you create pages, generate navigation, manage content, and build websites faster than ever.",
     "keywords": [
-        "streams module",
-        "streams addon",
-        "module"
+        "pages",
+        "module",
+        "streams platform"
     ],
-    "homepage": "http://anomaly.is/",
+    "homepage": "http://pyrocms.com/",
     "license": "MIT",
     "authors": [
         {
