--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "role": "Owner"
         }
     ],
-    "required": {
+    "require": {
         "anomaly/streams-platform": "~1.1",
         "anomaly/posts-module": "~2.1"
     },
