--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     ],
     "require": {
-        "anomaly/streams-platform": "~1.3.0"
+        "anomaly/streams-platform": "^1.3"
     },
     "autoload": {
         "psr-4": {
