--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,14 @@
             "name": "Ryan Thompson",
             "email": "ryan@pyrocms.com",
             "homepage": "http://ryanthepyro.com/",
-            "role": "Owner"
+            "role": "Developer"
         }
     ],
+    "support": {
+        "email": "support@pyrocms.com"
+    },
     "require": {
-        "anomaly/streams-platform": "^1.4",
+        "anomaly/streams-platform": "^1.5",
         "anomaly/preferences-module": "^2.1"
     },
     "autoload": {
